# virtuafake-gate

./: Cargo.toml  build.sh
.cargo/: config.toml
config/: feedlist.toml  mongodb.toml
src/: main.rs
src/api/bili/: liveroom.rs  mod.rs
src/config/: cookie.rs  feedlist.rs  mod.rs  mongodb.rs
src/model/: event.rs  liver.rs  mod.rs
src/model/stat/: mod.rs
src/service/: index.rs  mod.rs
src/service/liver/: feedlist.rs  mod.rs  streaming_list.rs  user_info.rs
src/service/liveroom/: danmaku.rs  danmaku_heat.rs  enterroom.rs  gift.rs  info.rs  mod.rs  paid.rs  superchat.rs  watched.rs
src/service/proxy/: config.rs  liveroom_info.rs  mod.rs
