[package]
name = "virtuafake-gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1" }
# actix-files = "0.6.2"
futures = "0.3"
serde = { version="1", features= ["derive"] }
serde_json = { version = "1" }
expire = "0.1.1"
http_api_util = "0.1.2"

[dependencies.awc]
version = "3.0.1"
features = ["openssl"]

[dependencies.bilibili-client]
# path = "../bilibili-client"
git = "https://github.com/4t145/bilibili-client"
branch = "dev"