[package]
edition = "2021"
name = "virtuafake-gate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = {version = "4.2.1"}
# actix-files = "0.6.2"
bilive-danmaku = {git = "https://github.com/4t145/bilive-danmaku", branch = "master", features = [
  "event",
]}
bincode = {version = "1.3.3"}
bson = "2.4.0"
expire = "0.1.1"
futures = "0.3"
http_api_util = "0.1.2"
mongodb = "2.3.1"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
serde_with = "2.0.1"
toml = "0.5.9"
[dependencies.awc]
features = ["openssl"]
version = "3.0.1"

[dependencies.bilibili-client]
# path = "../bilibili-client"
branch = "dev"
git = "https://github.com/4t145/bilibili-client"
